--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+
+
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -24,6 +27,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver-sync</artifactId>
+      <version>4.1.1</version>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-core</artifactId>
