--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,8 @@
 <web-app>
   <display-name>Trabalho Final disciplina Prog 2</display-name>
 
+
+
   <servlet>
     <servlet-name>ProdutoController</servlet-name>
     <servlet-class>org.prog2.controller.ProdutoController</servlet-class>
@@ -22,6 +24,70 @@
   </servlet>
 
 
+  <servlet>
+    <servlet-name>FilialController</servlet-name>
+    <servlet-class>org.prog2.controller.FilialController</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>ListarFilialController</servlet-name>
+    <servlet-class>org.prog2.controller.ListarFilialController</servlet-class>
+  </servlet>
+
+
+  <servlet>
+    <servlet-name>UsuarioController</servlet-name>
+    <servlet-class>org.prog2.controller.UsuarioController</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>ListarUsuarioController</servlet-name>
+    <servlet-class>org.prog2.controller.ListarUsuarioController</servlet-class>
+  </servlet>
+
+
+  <servlet>
+    <servlet-name>CardapioController</servlet-name>
+    <servlet-class>org.prog2.controller.CardapioController</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>ListarCardapioController</servlet-name>
+    <servlet-class>org.prog2.controller.ListarCardapioController</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>ListarCardapioController</servlet-name>
+    <url-pattern>/listarcardapio</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>CardapioController</servlet-name>
+    <url-pattern>/cardapio</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>ListarUsuarioController</servlet-name>
+    <url-pattern>/listarusuario</url-pattern>
+  </servlet-mapping>
+
+
+  <servlet-mapping>
+    <servlet-name>UsuarioController</servlet-name>
+    <url-pattern>/usuario</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>ListarFilialController</servlet-name>
+    <url-pattern>/listarfilial</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>FilialController</servlet-name>
+    <url-pattern>/filial</url-pattern>
+  </servlet-mapping>
+
+
   <servlet-mapping>
     <servlet-name>InicioController</servlet-name>
     <url-pattern>/inicio</url-pattern>
@@ -36,7 +102,6 @@
     <servlet-name>ListaProdutoController</servlet-name>
     <url-pattern>/listarprodutos</url-pattern>
   </servlet-mapping>
-
 
 
 
